--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
